--- a/lab02/index.html
+++ b/lab02/index.html
@@ -10,12 +10,11 @@
         </header>
         <main>
             
-            <section>
+            <article>
                 <h2>Labs 1 && 2</h2>
                 <p>
                     <em>Published on February 14, 2026 by Edward</em>
                     <br>
-                    <em>because I can't get a date</em>
                     <br> <br>
                     This is not my first webpage!  I had my first experience with HTML in highschool, 
                     at the time I thought a page all about cheese was going to be pretty tasty.  At 
@@ -25,32 +24,31 @@
                     of fun.  I've found this track be to be energizing and inspiring!
 
                 </p>
-            </section>
-            <section>
-                <h3>What I Learned</h3>
-                <p>
-                    <ol>
-                        <li>the relationship between http and html</li>
-                        <li>email protocols are a web standard</li>
-                        <li>Al Gore didn't invent the Internet!
+            
+                    <h3>What I Learned</h3>
+                    <p>
+                        <ol>
+                            <li>The relationship between http and html</li>
+                            <li>Email protocols are a web standard</li>
+                            <li>Al Gore didn't invent the Internet!
                             <br>
                             it was Tim-Berners Lee! (kind of)
-                        </li>
-                    </ol>
-                    <br>
-                    I've also found it interesting to learn about how html, css and javascript 
-                    each contribute to a working website.
-                    <br>These websites have been great resources:
-                    <br><br>
-                    <ul>
-                        <li><a href="https://www.w3schools.com/">w3schools</a></li>
-                        <li><a href="https://freecodecamp.org">freecodecamp</a></li>
-                    </ul>
-                </p>
-            </section>
+                            </li>
+                        </ol>
+                        <br>
+                        I've also found it interesting to learn about how html, css and javascript 
+                        each contribute to a working website.
+                        <br>These websites have been great resources:
+                        <br><br>
+                        <ul>
+                            <li><a href="https://www.w3schools.com/">w3schools</a></li>
+                            <li><a href="https://freecodecamp.org">freecodecamp</a></li>
+                        </ul>
+                    </p>
+            </article>
         </main>
         <footer>
-            <p><img src="frog_image.jpg" alt="my test image"/></p>
+            <p>© 2026 Student in CSIT 121</p>
         </footer>
 
     </body>
